--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -7,6 +7,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <meta
+      name="description"
+      content="Upfront Local Insights provides insights on local businesses in your area."
+    />
+    <meta
+      name="keywords"
+      content="local business, insights, reviews"
+    />
+
     <title>Upfront Local Insights</title>
   </head>
   <body>
