--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -19,7 +19,7 @@
     <title>Upfront Local Insights</title>
   </head>
   <body>
-    <div id="root" class="bgImage"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
